--- a/styles.css
+++ b/styles.css
@@ -113,5 +113,137 @@ h1 {
 }
 
 #todays-posts {
-  
+  width: 95%;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+#tp-header {
+  display: flex;
+  column-gap: 20px;
+}
+
+#tp-title {
+  color: white;
+  margin: 0;
+  font-size: 45px;
+}
+
+#tp-post-btn {
+  border: 2px solid #ff5bc3;
+  border-radius: 20px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  text-align: center;
+  padding: 10px;
+}
+
+#tp-container {
+  display: flex;
+  width: 100%;
+  /* background-color: #111111; */
+
+  margin-top: 10px;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  max-width: 250px;
+  min-height: 250px;
+  max-height: 300px;
+  border-radius: 25px;
+  overflow: hidden;
+  background-color: #181818;
+}
+
+.post-img {
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
+  border-radius: 25px;
+}
+
+.post-likes {
+  margin: 5px;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  font-weight: 100;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.745);
+  /* border-radius: 16px; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7.5px);
+  -webkit-backdrop-filter: blur(7.5px);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.m-post {
+  width: 80%;
+  max-width: 800px;
+  height: 60%;
+  display: grid;
+  grid-template-columns: 1.1fr 0.9fr;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: #111111;
+  -webkit-box-shadow: 0px 0px 20px -4px rgba(209, 209, 209, 1);
+  -moz-box-shadow: 0px 0px 20px -4px rgba(209, 209, 209, 1);
+  box-shadow: 0px 0px 20px -4px rgba(209, 209, 209, 1);
+}
+
+.m-post-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.m-post-details {
+  padding: 15px;
+  overflow: auto;
+}
+
+.m-post-username {
+  color: white;
+  font-size: 30px;
+  margin-top: 0;
+}
+
+.m-post-caption {
+  color: white;
+  opacity: 0.8;
+  font-style: italic;
+  letter-spacing: 2px;
+}
+
+.m-post-like {
+  width: 40px;
+  text-align: center;
+  border: #ff5bc3 solid 2px;
+  border-radius: 15px;
+  color: white;
+  padding: 3px;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
 }
