modified:   index.html 	created login frontend:   login.html 	modified:   previous-memories.html 	created register frontend:   register.html 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@ h1 {
   margin: 0;
   margin-left: 15px;
 }
+a {
+  text-decoration: none;
+}
 
 .jersey-20-regular {
   font-family: "Jersey 20", serif;
@@ -321,4 +324,52 @@ h1 {
   max-height: 100px;
   object-fit: cover;
   border-radius: 5px;
+}
+
+#login-page {
+  /* border: 2px solid white; */
+  height: 70vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#login-form {
+  width: 300px;
+  /* border: 2px solid white; */
+  height: 200px;
+  min-height: fit-content;
+  background-color: #181818;
+  color: white;
+  padding: 25px;
+  border-radius: 25px;
+
+  /* margin: 0 auto; */
+}
+
+.form-input {
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-input input {
+  background-color: #242424;
+  color: white;
+  border-radius: 15px;
+  text-align: center;
+  border-color: #ff5bc3;
+  box-shadow: 2px 2px 4px #4f4e4e;
+  font-size: 16px;
+}
+
+#login-form button {
+  background-color: #fa3cb4;
+  height: 30px;
+  width: 70px;
+  border-radius: 20px;
+  border: none;
+  box-shadow: 2px 2px 4px #4f4e4e;
+  cursor: pointer;
 }
